# mrus

./: Dockerfile  Jenkinsfile  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  requirements.txt  schemas.py
