[project]
name = "mrus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
]
